bleeding fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -95,7 +95,7 @@
 	--primary-shadow: 0px 10px 20px rgba(16, 68, 209, 0.185);
 	--popup-shadow: 0px 20px 35px rgba(7, 74, 126, 0.123);
 	--popup-background: rgba(20, 23, 54, 0.17255);
-	transition: all 10s;
+	/* transition: all 10s; */
 }
 
 /*********************** global variable declaration End ********************************************/
